# cobol-migrator

./: README.md
cobol-migrator/: .env.example  dev.sh  main.py  pyproject.toml
cobol-migrator/frontend/: package-lock.json  package.json  vite.config.js
cobol-migrator/frontend/src/: App.jsx  api.js  index.css
cobol-migrator/frontend/src/__tests__/: CodePanel.test.jsx  InputPanel.test.jsx  ProgressSteps.test.jsx  RepoPanel.test.jsx  StatusBar.test.jsx  ValidationPanel.test.jsx
cobol-migrator/frontend/src/components/: CodePanel.jsx  DocumentPanel.jsx  InputPanel.jsx  ProgressSteps.jsx  RepoPanel.jsx  StatusBar.jsx  ValidationPanel.jsx
cobol-migrator/src/: api.py  llm.py  pipeline.py  state.py
cobol-migrator/src/agents/: document_agent.py  parse_agent.py  reflect_agent.py  translate_agent.py  validate_agent.py
cobol-migrator/tests/: sample.cbl  test_stage2.py  test_stage3.py  test_stage4.py
